# MERI

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
data/demo_data/: dummy_schema.json
data/table_extraction/annotations/: Alfa Laval LKH_2_0.csv  Alfa Laval LKH_2_1.csv  Alfa Laval LKH_2_2.csv  Alfa Laval LKH_2_3.csv  Alfa Laval LKH_2_4.csv  Alfa Laval LKH_2_5.csv  Alfa Laval LKH_2_6.csv  Alfa Laval LKH_2_7.csv  Alfa Laval LKH_2_8.csv  Alfa Laval LKH_2_9.csv  Alfa Laval LKH_3_0.csv  Alfa Laval LKH_3_1.csv  Alfa Laval LKH_3_2.csv  Alfa Laval LKH_3_3.csv  annotation.json  annotation_only_diff.json
demo/: demo_meri.py  demo_meri_v1.py  layout_detection_demo.py
docker/: Dockerfile  app.Dockerfile  dev.Dockerfile
docs/notebooks/: 1_layout_analysis.ipynb  2_transformation.ipynb  3_parameter_extraction.ipynb  layout_analysis.ipynb  transformation.ipynb
evaluation/: datasets.py  table_evaluator.py  table_extraction_evaluation.ipynb  utils.py
evaluation/full_pipeline/: full_pipeline_evaluator.py  tests.ipynb
layout_eval/: layout_evaluations.py  test.ipynb  utils.py
meri/: meri.py
meri/configs/: __init__.py  meri_custom.yaml  meri_default.yaml
meri/configs/layout/: doctr_config.yaml  new_nms.yaml  nms.yaml  table_detector_config.yaml
meri/extraction/: extractor.py  iterative_json_completion.py
meri/layout/config/: good_pipeline.yaml  layout_detector_config.yaml  table_detector_config.yaml
meri/layout/pipeline/: pipeline.py
meri/layout/pipeline_components/: __init__.py  dummy_detector_component.py  image_detector_component.py  layout_detection_component.py  nms_component.py  ocr_component.py  table_detector_component.py  table_plumber_detector_component.py  utils.py  word_union_component.py
meri/transformation/: transformer.py
meri/transformation/elements/: figure.py  (+4 more)
meri/utils/: __init__.py  document_processing.py  format_handler.py  llm_extractor.py  llm_utils.py  prompts.py  pydantic_models.py  table_structure_recognizer.py  utils.py
src/meri/: __init__.py  meri.py
tests/: test_evaluation.py
tests/test_data/: test_csv.csv
(+34 files in other folders)
