[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meri"
version = "0.1.0"
description = "Package for modality aware information extraction and retrieval from pdf documents."
authors = [
    { name = "Christian Möller", email = "christian.moller@novia.fi" },
    { name = "Lamin Jatta", email = "lamin.jatta@novia.fi" }
]
requires-python = ">= 3.8"
dependencies = [
    "opencv-python==4.10.0.84",
    "notebook==7.2.2",
    "timm==1.0.9",
    "PyMuPDF==1.24.9",
    "pillow==10.4.0",
    "numpy==1.26.4",
    "easyocr==1.7.1",
    "pytesseract==0.3.13",
    "transformers==4.44.2",
    "deepdoctection==0.32",
    "python-dotenv==1.0.1",
    "python-doctr==0.9.0",
    "pdfplumber==0.11.4",
    "gradio==4.42.0",
    "tabula-py==2.9.3",
    "tiktoken==0.7.0",
    "openai==1.42.0",
    "ultralytics==8.2.96",
    "detectron2 @ git+https://github.com/facebookresearch/detectron2.git@5b72c27ae39f99db75d43f18fd1312e1ea934e60"
]

# Include all .yaml files at any depth in the meri package
[tool.setuptools.package-data]
"meri" = ["**/*.yaml"]

